--- a/playbooks/roles/veda_web_frontend/meta/main.yml
+++ b/playbooks/roles/veda_web_frontend/meta/main.yml
@@ -35,3 +35,4 @@ dependencies:
     edx_django_service_db_password: '{{ VEDA_WEB_FRONTEND_MYSQL_PASSWORD }}'
     edx_django_service_use_python3: false
     edx_django_service_config: '{{ VEDA_WEB_FRONTEND_SERVICE_CONFIG }}'
+    edx_django_service_post_migrate_commands: '{{ veda_web_frontend_post_migrate_commands }}'
