--- a/playbooks/roles/edxlocal/tasks/main.yml
+++ b/playbooks/roles/edxlocal/tasks/main.yml
@@ -23,6 +23,7 @@
     name: "{{ item.user }}"
     password: "{{ item.pass }}"
     priv: "{{ item.db }}.*:ALL"
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
     append_privs: yes
   when: item.db != None and item.db != ''
   with_items: "{{ edxlocal_database_users }}"
@@ -32,6 +33,7 @@
     name: "{{ COMMON_MYSQL_MIGRATE_USER }}"
     password: "{{ COMMON_MYSQL_MIGRATE_PASS }}"
     priv: "{{ item }}.*:ALL"
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
     append_privs: yes
   when: item != None and item != ''
   with_items: "{{ edxlocal_databases }}"
@@ -40,6 +42,7 @@
   mysql_user:
     name: "api001"
     password: "{{ ANALYTICS_API_DATABASES.default.PASSWORD }}"
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
     priv: '{{ ANALYTICS_API_DATABASES.default.NAME }}.*:ALL/reports.*:SELECT'
   when: ANALYTICS_API_SERVICE_CONFIG is defined
 
@@ -48,6 +51,7 @@
     name: reports001
     password: "{{ ANALYTICS_API_DATABASES.reports.PASSWORD }}"
     priv: '{{ ANALYTICS_API_DATABASES.reports.NAME }}.*:SELECT'
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
   when: ANALYTICS_API_SERVICE_CONFIG is defined
 
 - name: create a database for the hive metastore
@@ -62,6 +66,7 @@
     name: "{{ EDX_NOTES_API_MYSQL_DB_USER }}"
     password: "{{ EDX_NOTES_API_MYSQL_DB_PASS }}"
     priv: "{{ EDX_NOTES_API_MYSQL_DB_NAME }}.*:SELECT,INSERT,UPDATE,DELETE"
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
   when: EDX_NOTES_API_MYSQL_DB_USER is defined
 
 - name: setup the read-only db user
@@ -69,9 +74,11 @@
     name: "{{ COMMON_MYSQL_READ_ONLY_USER }}"
     password: "{{ COMMON_MYSQL_READ_ONLY_PASS }}"
     priv: "*.*:ALL"
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
 
 - name: setup the admin db user
   mysql_user:
     name: "{{ COMMON_MYSQL_ADMIN_USER }}"
     password: "{{ COMMON_MYSQL_ADMIN_PASS }}"
     priv: "*.*:CREATE USER"
+    host: "{{ EDXLOCAL_MYSQL_ALLOWED_HOST }}"        
