--- a/playbooks/small_deployments/ecommerce.yml
+++ b/playbooks/small_deployments/ecommerce.yml
@@ -14,8 +14,8 @@
     EDXAPP_LMS_NGINX_PORT: '80'
     ENABLE_ECOMMERCE: False  # Disable ecommerce by default
     EDXAPP_MONGO_HOSTS: "{{ groups['datastores'] }}"
-    EDXAPP_MYSQL_HOST: "{{ groups['datastores'][0] }}"
-    EDXAPP_MYSQL_CSMH_HOST: "{{ groups['datastores'][0] }}"
+    EDXAPP_MYSQL_HOST: "13.126.6.71"
+    EDXAPP_MYSQL_CSMH_HOST: "13.126.6.71"
     EDXAPP_ELASTIC_SEARCH_CONFIG:
       - host: "{{ groups['datastores'][0] }}"
         port: 9200
